[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "todo"
path = "src/lib.rs"

[dependencies]
chrono = "0"
duration-human = "0"
cron = "0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
